.k8s/argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100m
    ingress.kubernetes.io/app-root: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
      host: argo.srobot.dev
  tls:
    - hosts:
        - argo.srobot.dev
